# influx-line

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
src/: error.rs  lib.rs
src/line/: hash_like.rs  mod.rs
src/line/parsing/: field.rs  key.rs  measurement.rs  mod.rs  tag.rs
src/types/: boolean.rs  integer.rs  mod.rs  name.rs  timestamp.rs  value.rs
src/types/string/: formatter.rs  key.rs  measurement.rs  mod.rs  name.rs  parser.rs  quoted.rs
