[package]
name = "influx-line"
version = "1.0.0"
edition = "2024"
authors = ["Invian"]
license-file = "LICENSE"

[dependencies]
derive_more = { version = "2", features = [
    "from",
    "into",
    "try_into",
    "display",
    "deref",
    "index",
] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
rstest = "0.21"
